# carbon-cli-ys

./: Cargo.toml  LICENSE  README.md
src/: idl.rs  instructions.rs  legacy_idl.rs  main.rs
src/handlers/: parse.rs
src/handlers/codama/: parse_codama.rs
templates/: accounts_struct.askama  events_struct.askama  instructions_mod.askama  instructions_struct.askama  project.askama
